chore:update event details

--- a/event/event.html
+++ b/event/event.html
@@ -183,7 +183,8 @@
                         <button class="collapsible">
 								<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue &amp; Timing</button>
                         <div class="content">
-                            <p>Venue : Online event <br> Time :10 AM onwards  <br> Date : November 21-22 </p>
+                            <p><strong>Round 1:</strong><br>Venue : Online event <br> Time :2PM - 4PM  <br> Date : November 21 </p>
+                            <p><strong>Round 2:</strong><br>Venue : Online event <br> Time :11AM - 1PM  <br> Date : November 22 </p>
                         </div>
 
                         <button class="collapsible">
@@ -276,6 +277,14 @@
                                     <li> Submit code and APK file 2 days prior to the event.</li>
                                     <li> Muliple submissions will not be allowed.</li>
                                     <li>Submissions will be accepted till 18th November, 2020.</li>
+                                    <li><strong>Themes</strong></li>
+                                    <ol>
+                                        <li>Cyber Hack</li>
+                                        <li>E-Commerce</li>
+                                        <li>Health Freak</li>
+                                        <li>Customer-Care</li>
+                                    </ol>
+                                    <li><a href="https://forms.gle/fMpYVSFJeVz2Rq8a6">Click here</a> to register for i.App.</li>
                                 </ul>
                             </p>
                         </div>
@@ -332,7 +341,14 @@
                                     <li> The rules of the event are subject to change on the jurisdiction of the organisers of the event.</li>
                                     <li>The hackathon will start at <strong>Nov 10, 12:00 AM IST</strong> and end at <strong>Nov 18 12:00 AM IST</strong>, you work on your hack during the allotted time only.</li>
                                     <li>  It's an online hackathon, you can participate from anywhere.</li>
-                                    <li>There are<span>5 themes</span> of the hackathon, you must submit a hack that is in one of the given themes.</li>
+                                    <li>There are<strong> 5 themes</strong> for the hackathon, you must submit a hack that is in one of the given themes.</li>
+                                    <ol>
+                                        <li>Pandemic Hack</li>
+                                        <li>ML Hack</li>
+                                        <li>Productivity Hack</li>
+                                        <li>EdTech Hack</li>
+                                        <li>Business Hack</li>
+                                    </ol>
                                     <li>Once the hackathon starts, you will get an option to submit your hack, you can submit as many times as you want, the last hack will be considered as the final submission.</li>
                                     <li>You are expected to come up with new and innovative ideas, any idea that has been copied from somewhere will be disqualified.</li>
                                     <li>  Your hack must be developed entirely during the Hackathon duration. You may use open source libraries and other freely available systems / services such as Google Maps, Facebook Connect, Twitter feeds etc.</li>
@@ -340,6 +356,7 @@
                                     <li> All rules and regulations are binding to the participants of i.Web'20.</li>
                                     <li> The sole right to modify and/or enforce the rules lies with the organizers of the event.</li>
                                     <li>  The organizers reserve the right to debar any candidate from the event, should the candidate involve in misconduct detrimental or demeaning to either himself/herself or other candidates.</li>
+                                    <li><a href="https://forms.gle/2pinEaDyhnoeMe537">Click here</a> to register for i.Web.</li>
                                 </ul>
                             </p>
                         </div>
@@ -402,7 +419,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue &amp; Timing</button>
                         <div class="content">
-                            <p>Venue : Online event <br> Time :3PM - 5PM   <br> Date : November 22 </p>
+                            <p>Venue : Online event <br> Time :15.00 - 17.30   <br> Date : November 22 </p>
                         </div>
 
                         <button class="collapsible">
@@ -443,7 +460,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: 4.5K </b></p>
+                            <p><b>Prizes worth: 5K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -456,10 +473,10 @@
                                 <i class="fa fa-address-card" aria-hidden="true"></i>&nbsp&nbsp&nbsp Contact Details</button>
                         <div class="content">
                             <p>
-                                <!--<ul>
-                                    <li>Jui: <a href="tel:+919409407341">  9409407341</a></li>
-                                    <li>Harsh: <a href="tel:+919510506633"> 9510506633 </a></li>
-                                </ul>-->
+                                <ul>
+                                    <li>Neel Makadiya: <a href="tel:+917048170498">  7048170498</a></li>
+                                    <li>Manan Joshi: <a href="tel:+918469811264"> 8469811264 </a></li>
+                                </ul>
                             </p>
                         </div>
                     </div>
@@ -1123,7 +1140,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b> 5K </b></p>
+                            <p><b> 16K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1232,19 +1249,7 @@
                             <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp&nbsp&nbsp General Rules</button>
                         <div class="content">
                             <p>
-                                <ul>
-                                    <li>Fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSc_VMpv2wz6qHCMOsMwae6q56hI_7S8U6qsmtbPqTUFtzmMMg/closedform" target="blank">form</a> to register for the tournament.</li>
-                                    <li>Tournament will be played in swiss format. To know more about this format, go <a href="https://en.wikipedia.org/wiki/Swiss-system_tournament" target="blank">here</a>.</li>
-                                    <li>For specific queries related to Lichess platform and online format, go <a href="https://lichess.org/swiss" target="blank">here</a>.</li>
-                                    <li>The tournament is going to be conducted on <a href="https://lichess.org/" target="blank">Lichess platform</a>. So, if you don’t have a Lichess account, go to Lichess and make your account.</li>
-                                    <li>You can take part in the tournament if and only if you are a part of the team on Lichess, so we have created our team; click <a href="https://lichess.org/team/chess64-ifest" target="blank">here</a> to request for joining the team of Chess64. Only registered players (who have filled google form given above) will be accepted in the team after verification of details from received responses. Such accepted players will be able to play only.</li>
-                                    <strong>Note: Team and tournament can be accessed only through the browser as the app hasn't been updated with such features.</strong>
-                                    <li>Once you join the team, you will be able to see the tournament. <strong>Join</strong> in that tournament and appropriate pairing will be done after commencement of the tournament.</li>
-                                    <strong>The details for the same are as follows:</strong>
-                                    <li>Number of Rounds : 8</li>
-                                    <li>Time Control: 10 mins + 2 secs for each</li>
-                                    <li>Break between rounds: 2 minutes</li>
-                                </ul>
+                                Please <a href="https://drive.google.com/file/d/1Pu7wEfNqxXB18bu7_MIowW7JQSEkdXpn/view?usp=sharing" target="blank">click here</a> to view rules of this event.
                             </p>
                         </div>
                         
