--- a/sponsors.html
+++ b/sponsors.html
@@ -114,6 +114,12 @@
       <a href="http://www.ssipgujarat.in/" target="_blank">
         <li><img src="images/sponsors/13.png" /></li>
       </a>
+      <a href="https://gil.gujarat.gov.in/" target="_blank">
+        <li><img src="images/sponsors/GIL Logo.png" /></li>
+      </a>
+      <a href="https://dst.gov.in/" target="_blank">
+        <li><img src="images/sponsors/DST logo-large-without background.png" /></li>
+      </a>
       <a href="http://sites.ieee.org/sb-daiict-wie/" target="_blank">
         <li><img src="images/sponsors/9.png" /></li>
       </a>
