feat: add ISRO event to openbox

--- a/openbox.html
+++ b/openbox.html
@@ -147,6 +147,58 @@
                     </div>
                 </div>
 
+                <div class="box">
+                    <!--<h1 style="color: rgb(53, 123, 228); margin-top: 20px">Mr. Pavitar Singh</h1>-->
+                    <img src="images/openbox/ISRO1.png" alt="ISRO session" style="display:block;margin-left: auto;margin-right: auto;width: 80%;">
+
+                    <div class="box2">
+                        <button class="collapsible">
+							<i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp&nbsp&nbsp Description</button>
+                        <div class="content">
+                            <p>
+                                Space exploration always seems fascinating and thought-provoking to us! Being Indians, we all know about the kind of missions Indian Space Research Organization (ISRO) works on and it's exciting space programs.
+                            </p>
+                            <p>
+                                So, to quench the thirst of all space enthusiasts, i.Fest ’20 brings an interactive session on “Indian Space Program - Gaganyaan” with Dr. Nilesh M. Desai Associate Director, Space Applications Centre, ISRO and Sh. Anurag Verma, Head, Gaganyaan Crew Communications and Cabin Systems, ISRO. 
+                            </p>
+                            <p>    
+                                This session will cover an overview of Indian Space Programs, Gaganyaan, the associated research opportunities for us engineers, with a Live Demo and Q&A session at the end as well.
+                            </p>
+                        </div>
+
+                        <!--button class="collapsible">
+							<di class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue</button>
+                        <div class="content">
+                            <p>LT 2, DA-IICT</p>
+                        </div>-->
+                        
+
+                        <button class="collapsible">
+							<i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp&nbsp&nbsp Date and Time </button>
+                        <div class="content">
+                            <p>21st November 2020</p>
+                            <p>6.15 PM</p>
+                        </div>
+
+                        <!--<button class="collapsible">
+							<i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Registration Fees</button>
+                        <div class="content">
+                            <p>Rs. 250(for non-IEEE members)<br> Rs. 200(for IEEE members)</p>
+                        </div>-->
+
+                        <button class="collapsible">
+							<i class="fa fa-address-card" aria-hidden="true"></i>&nbsp&nbsp&nbsp Contact Details</button>
+                        <div class="content">
+                            <p>
+                                <ul>
+                                    <li>Siddharth Rathod : <a href="tel:+917046098218">+91 7046098218</a></li>
+                                    <li>Rinkal Naik : <a href="tel:+917069670451">+91 7069670451</a></li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
                 <!--<div class="box" style="margin-bottom: 100px">
                     <h1 style="color: rgb(53, 123, 228); margin-top: 20px">Frontend using Angular and APIs mangement using Firestore</h1>
 
