feat: add events registration btn
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
   <body>
     <div id="main-container">
       <div id="red" class="fullpage fullpage-scroll" data-section-name="home">
+        <div>
+          <a href="https://ifest20-server.herokuapp.com/" target="_blank">
+            <button class="event-reg-btn color-1">Events Registration</button>
+          </a>
+        </div>
         <div id="wrapper" class="wrapper">
           <div class="main-agile">
             <img
@@ -158,159 +163,6 @@
               </li>
             </ul>
           </nav>
-
-          <!-- Pop up icons -->
-          <div class="container">
-            <section id="first-view" style="padding: 0%">
-              <div class="fv-content">
-                <div class="content-container">
-                  <!-- <div class="item">
-                    <div class="ifest-content1">
-                      <h2
-                        style="
-                          color: #fff;
-                          text-transform: none;
-                          font-family: 'Raleway', sans-serif;
-                          z-index: 100;
-                        "
-                      >
-                        B U Y &nbsp T I C K E T S
-                      </h2>
-                    </div>
-
-                    <div class="ifest-content2">
-                      <a href="#popup1"
-                        ><img
-                          src="images/a.png"
-                          class="animated zoomInLeft"
-                          height="50px"
-                          width="100px"
-                          style="margin-bottom: 10px"
-                      /></a>
-                      <a
-                        href="#popup2"
-                        style="padding-left: 10px; padding-right: 10px"
-                        ><img
-                          src="images/b.png"
-                          class="animated pulse infinite"
-                          height="70px"
-                          width="125px"
-                      /></a>
-                      <a href="#popup3"
-                        ><img
-                          src="images/c.png"
-                          class="animated zoomInRight"
-                          height="50px"
-                          width="100px"
-                          style="margin-bottom: 10px"
-                      /></a>
-                    </div>
-                  </div> -->
-                  <!-- POPUP -->
-                  <div id="popup1" class="overlay">
-                    <div class="popup">
-                      <a class="close" href="#sitemap">&times;</a>
-                      <div class="content">
-                        <h2>
-                          Tickets For Website Designing Workshop<br />[21/09/19]
-                        </h2>
-                        <iframe
-                          src="https://allevents.in/manage/tickets/book.php?event_id=80002802795100&platform=iframe&hide_details=1"
-                          style="
-                            width: 90%;
-                            height: 520px;
-                            border: 1px solid #efefef;
-                            z-index: 2;
-                          "
-                        >
-                        </iframe>
-                        <br />
-                        <div style="margin-top: 5%; margin-bottom: 5%">
-                          <a href="https://allevents.in/" target="_blank">
-                            <img
-                              src="images/allevents.png"
-                              height="50px"
-                              width="230px"
-                            /> </a
-                          ><br /><br />
-                          <span style="color: #000"
-                            >Official Ticketing Partner</span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div id="popup2" class="overlay">
-                    <div class="popup">
-                      <h2>Tickets For i.Fest '19</h2>
-                      <a class="close" href="#sitemap">&times;</a>
-                      <div class="content">
-                        <iframe
-                          src="https://allevents.in/manage/tickets/book.php?event_id=80001136960226&platform=iframe&hide_details=1"
-                          style="
-                            width: 95%;
-                            height: 520px;
-                            border: 1px solid #efefef;
-                            z-index: 2;
-                          "
-                        >
-                        </iframe>
-                        <br />
-                        <div style="margin-top: 5%; margin-bottom: 5%">
-                          <a href="https://allevents.in/" target="_blank">
-                            <img
-                              src="images/allevents.png"
-                              height="50px"
-                              width="230px"
-                            />
-                          </a>
-                          <br />
-                          <br /><span style="color: #000"
-                            >Official Ticketing Partner</span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div id="popup3" class="overlay">
-                    <div class="popup">
-                      <h2>Tickets For Paintball at i.Fest '19</h2>
-                      <a class="close" href="#sitemap">&times;</a>
-                      <div class="content">
-                        <iframe
-                          src="https://allevents.in/manage/tickets/book.php?event_id=80002948243236&auto_fill=1&platform=iframe&hide_details=1"
-                          style="
-                            width: 90%;
-                            height: 520px;
-                            border: 1px solid #efefef;
-                            z-index: 2;
-                          "
-                        >
-                        </iframe>
-                        <br />
-                        <div style="margin-top: 5%; margin-bottom: 5%">
-                          <a href="https://allevents.in/" target="_blank">
-                            <img
-                              src="images/allevents.png"
-                              height="50px"
-                              width="230px"
-                            />
-                          </a>
-                          <br />
-                          <br />
-                          <span style="color: #000"
-                            >Official Ticketing Partner</span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </div>
 
           <div class="fraza fade">
             <div class="synapse__logo">
