chore: add registration instruction
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
               ₹100 for General Participants <br />
               ₹50 for IEEE members
             </p>
+            <p style="color: white; font-size: 15px">
+              <em>
+                *Please register yourself for the events by clicking on the
+                <strong>"Events Registration"</strong> button. <br />Due to the
+                virtual mode, it is mandatory to register to take part in events
+                conducted during i.Fest '20
+              </em>
+            </p>
             <!--<a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
               <img id="tictechtoelogo" src="images/tictechtoelogo.png" />
             </a>-->
