--- a/sponsors.html
+++ b/sponsors.html
@@ -141,6 +141,9 @@
       <a href="https://www.blackposition.in/" target="_blank">
         <li><img src="images/sponsors/black_position.jpeg" /></li>
       </a>
+      <a href="https://www.perplexart.com/" target="_blank">
+        <li><img src="images/sponsors/perplex art logo rectangular.png" /></li>
+      </a>
       <a href="https://www.finstreet.in/events" target="_blank">
         <li><img src="images/sponsors/Finstreet.png" /></li>
       </a>
