--- a/sponsors.html
+++ b/sponsors.html
@@ -118,7 +118,9 @@
         <li><img src="images/sponsors/GIL Logo.png" /></li>
       </a>
       <a href="https://dst.gov.in/" target="_blank">
-        <li><img src="images/sponsors/DST logo-large-without background.png" /></li>
+        <li>
+          <img src="images/sponsors/DST logo-large-without background.png" />
+        </li>
       </a>
       <a href="http://sites.ieee.org/sb-daiict-wie/" target="_blank">
         <li><img src="images/sponsors/9.png" /></li>
@@ -147,6 +149,9 @@
       <a href="https://www.finstreet.in/events" target="_blank">
         <li><img src="images/sponsors/Finstreet.png" /></li>
       </a>
+      <a href="https://www.careerlauncher.com" target="_blank">
+        <li><img src="images/sponsors/careerLauncher.png" /></li>
+      </a>
     </ul>
 
     <div class="page-title">
@@ -168,9 +173,6 @@
       </a>
       <a href="https://www.thegymlounge.nl" target="_blank">
         <li><img src="images/sponsors/gymLounge.jpg" /></li>
-      </a>
-      <a href="https://www.careerlauncher.com" target="_blank">
-        <li><img src="images/sponsors/careerLauncher.png" /></li>
       </a>
       <a href="http://beannco.com" target="_blank">
         <li><img src="images/sponsors/beansCo.jpg" /></li>
