chore: update event and timer
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/event/event.html
+++ b/event/event.html
@@ -1212,13 +1212,13 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: 6K</b></p>
+                            <p><b>Prizes worth: 8K</b></p>
                         </div>
 
                         <button class="collapsible">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue &amp; Timing</button>
                         <div class="content">
-                            <p>Phase 1 -<br> Venue : Online event <br> Time : - <br> Date : - 
+                            <p>Phase 1 -<br> Venue : Online event <br> Time : 1:30 PM Onwards<br> Date : 22nd Nov
                             </p>
                         </div>
 
