chore: Update i.Papyrus general rules

--- a/event/event.html
+++ b/event/event.html
@@ -502,7 +502,7 @@
                                     <li>There are two categories for submission UG(Undergraduate)and PG(Postgraduate).</li>
                                     <li>Participants will be given 15 minutes to present their posters and 5 minutes for question answers.</li>
                                     <li>Each team can submit only a single poster.</li>
-                                    <li>Participants must submit their posters before 5:00 PM 19th November, 2020.</li>
+                                    <!--<li>Participants must submit their posters before 5:00 PM 19th November, 2020.</li>-->
                                     <li>Submission details will be mailed to all registered participants.</li>
                                     <li>Submitted posters will be screened by the coordinators who’ll check to see the relevance of the poster with the event theme. On clearing the screening process participants will be notified for the final round via email.</li>
                                     <li> The final round will be on November 21, 2020.</li>
