chore: add i.App judge details

--- a/event/event.html
+++ b/event/event.html
@@ -296,6 +296,13 @@
                         </div>
 
                         <button class="collapsible">
+                            <i class="fa fa-gavel" aria-hidden="true"></i> Judge </button>
+                        <div class="content">
+                            <img src="../images/events/judge_iapp.jpg" alt="Dhrumil Shah" align="center" style="width: 200px;height: 200px;display: inline-block;" />
+                            <p style="display: inline-block;font-size: 18px;"><strong>Mr. Dhrumil Shah,</strong><br><br> GDE Flutter and Dart,<br> Senior Mobile Application Developer,<br> GoHighLevel</p>
+                        </div>
+
+                        <button class="collapsible">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue &amp; Timing</button>
                         <div class="content">
                             <p>Venue : Online event <br> Time :10.00 AM onwards   <br> Date : November 21 </p>
