chore: add i.Web Judge details

--- a/event/event.html
+++ b/event/event.html
@@ -296,7 +296,7 @@
                         </div>
 
                         <button class="collapsible">
-                            <i class="fa fa-gavel" aria-hidden="true"></i> Judge </button>
+                            <i class="fa fa-gavel" aria-hidden="true"></i>&nbsp&nbsp Judge </button>
                         <div class="content">
                             <img src="../images/events/judge_iapp.jpg" alt="Dhrumil Shah" align="center" style="width: 200px;height: 200px;display: inline-block;" />
                             <p style="display: inline-block;font-size: 18px;"><strong>Mr. Dhrumil Shah,</strong><br><br> GDE Flutter and Dart,<br> Senior Mobile Application Developer,<br> GoHighLevel</p>
@@ -372,6 +372,13 @@
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
                             <p><b>Prizes worth: 3K </b></p>
+                        </div>
+
+                        <button class="collapsible">
+                            <i class="fa fa-gavel" aria-hidden="true"></i>&nbsp&nbsp Judge </button>
+                        <div class="content">
+                            <img src="../images/events/judge_iweb.JPG" alt="Hiren Dave" align="center" style="width: 200px;height: 200px;display: inline-block;" />
+                            <p style="display: inline-block;font-size: 18px;"><strong>Mr. Hiren Dave,</strong><br><br> CTO, AbhayTech Solutions LLP,<br> Co-organiser, <br> GDG Ahmedabad</p>
                         </div>
 
                         <button class="collapsible">
