chore: add sponosors

--- a/sponsors.html
+++ b/sponsors.html
@@ -162,6 +162,12 @@
       <a href="https://www.airmeet.com/" target="_blank">
         <li><img src="images/sponsors/airmeet.jpeg" /></li>
       </a>
+      <a href="https://www.ieee.org/education/eab.html" target="_blank">
+        <li><img src="images/sponsors/ieee edu act..png" /></li>
+      </a>
+      <a href="https://ieee-sensors.org/" target="_blank">
+        <li><img src="images/sponsors/ieee sensors.png" /></li>
+      </a>
     </ul>
 
     <div class="page-title">
